# esp-thread-br

components/esp_ot_br_server/src/: esp_br_wifi_config.c
examples/: .gitignore  ITERATION_GUIDE.md  docker-compose.yml  物联网IoT指令响应协议规范（OpenThread+ESP-IDF 最终完整版).md
examples/basic_thread_border_router/: partitions.csv  sdkconfig.defaults
examples/basic_thread_border_router/main/: esp_ot_br.c  idf_component.yml
examples/common/iot_cap_adc_read/: CMakeLists.txt  idf_component.yml  iot_cap_adc_read.c  iot_cap_adc_read.h
examples/common/iot_cap_pwm_set/: CMakeLists.txt  idf_component.yml
examples/common/iot_cap_servo_set/: CMakeLists.txt
examples/common/iot_cap_switch/: CMakeLists.txt  idf_component.yml
examples/common/iot_device_core/: CMakeLists.txt  Kconfig.projbuild
examples/common/mqtt_ot_bridge/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
examples/common/mqtt_ot_bridge/docs/: MQTT_API.md
examples/common/mqtt_ot_bridge/include/: mqtt_ot_bridge.h
examples/common/mqtt_ot_bridge/src/: bridge_eui64.c  bridge_eui64.h  bridge_registry_json.c  bridge_registry_json.h  bridge_topic.c  bridge_topic.h  mqtt_ot_bridge.c
examples/common/mqtt_ot_bridge/test/host/: Makefile  test_eui64.c  test_registry_json.c  test_topic.c
examples/deep_sleep/: README.md
examples/deep_sleep/main/: CMakeLists.txt  Kconfig.projbuild  device_eui64.c  device_eui64.h  (+1 more)
examples/ot_cli/: CMakeLists.txt
examples/ot_iot_device/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/ot_rcp/: CMakeLists.txt
examples/ot_trel/: CMakeLists.txt
(+94 files in other folders)
